--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,5 @@ dependencyResolutionManagement {
 }
 rootProject.name = "My Photo Album"
 include ':app'
+include ':feature-album-overview'
+include ':feature-album-detail'
