--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -25,7 +25,8 @@ ext {
             retrofit : "com.squareup.retrofit2:retrofit:$retrofit_version",
             retrofitMoshi : "com.squareup.retrofit2:converter-moshi:$retrofit_version",
             moshiCodegen : "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version",
-            moshi : "com.squareup.moshi:moshi:$moshi_version"
+            moshi : "com.squareup.moshi:moshi:$moshi_version",
+            picasso : "com.squareup.picasso:picasso:2.8"
     ]
 
     jUnit = [
