--- a/core/build.gradle
+++ b/core/build.gradle
@@ -36,10 +36,12 @@ android {
 }
 
 dependencies {
+    api androidX.coreKtx
     api square.retrofit
     api square.moshi
     implementation square.retrofitMoshi
     implementation square.picasso
+    implementation jetBrains.coroutines
     implementation google.hiltAndroid
     kapt google.hiltCompiler
     kapt square.moshiCodegen
