--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -29,6 +29,10 @@ ext {
             picasso : "com.squareup.picasso:picasso:2.8"
     ]
 
+    jetBrains = [
+            coroutines : "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
+    ]
+
     jUnit = [
             jUnit : "junit:junit:4.13.2",
     ]
