--- a/feature-album-overview/build.gradle
+++ b/feature-album-overview/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 apply from: '../dependencies.gradle'
@@ -39,11 +41,9 @@ android {
 
 dependencies {
 
-    implementation androidX.coreKtx
-    implementation androidX.appCompat
-    implementation google.material
-    implementation androidX.constraintLayout
-    implementation androidX.navigationFragmentKtx
+    implementation google.hiltAndroid
+    kapt google.hiltCompiler
+    kapt square.moshiCodegen
 
     implementation project(path: ':core')
     implementation project(path: ':core-ui')
