--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -8,15 +8,20 @@ ext {
             navigationFragmentKtx : "androidx.navigation:navigation-fragment-ktx:$nav_version",
             navigationUiKtx : "androidx.navigation:navigation-ui-ktx:$nav_version",
             navigationDynamicFeaturesFragment : "androidx.navigation:navigation-dynamic-features-fragment:$nav_version",
+            composeNavigation : "androidx.navigation:navigation-compose:$nav_version",
+            composeActivity : "androidx.activity:activity-compose:1.4.0",
+            composeMaterial : "androidx.compose.material:material:1.1.1",
+            composeUiTooling : "androidx.compose.ui:ui-tooling:1.1.1",
+            composeLiveData : "androidx.compose.runtime:runtime-livedata:1.1.1",
+            composeLifecycleViewModel : "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1",
+            composeHiltNavigation : "androidx.hilt:hilt-navigation-compose:1.0.0",
             coreKtx : "androidx.core:core-ktx:1.8.0",
             appCompat : "androidx.appcompat:appcompat:1.4.2",
-            constraintLayout : "androidx.constraintlayout:constraintlayout:2.1.4",
             testExtJUnit : "androidx.test.ext:junit:1.1.3",
             testEspressoCore : "androidx.test.espresso:espresso-core:3.4.0",
     ]
 
     google = [
-            material : "com.google.android.material:material:1.6.1",
             hiltAndroid : "com.google.dagger:hilt-android:$hilt_version",
             hiltCompiler : "com.google.dagger:hilt-compiler:$hilt_version",
     ]
@@ -37,9 +42,10 @@ ext {
             jUnit : "junit:junit:4.13.2",
     ]
 
-    androidSdkVersions = [
+    versions = [
             compileSdk : 32,
             minSdk : 21,
-            targetSdk : 32
+            targetSdk : 32,
+            kotlinCompilerExtension : '1.1.1'
     ]
 }
