--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,19 +4,26 @@ def retrofit_version = "2.9.0"
 def moshi_version = "1.13.0"
 
 ext {
+    versions = [
+            compileSdk : 32,
+            minSdk : 21,
+            targetSdk : 32,
+            composeVersion : '1.1.1'
+    ]
+
     androidX = [
             navigationFragmentKtx : "androidx.navigation:navigation-fragment-ktx:$nav_version",
             navigationUiKtx : "androidx.navigation:navigation-ui-ktx:$nav_version",
             navigationDynamicFeaturesFragment : "androidx.navigation:navigation-dynamic-features-fragment:$nav_version",
             composeNavigation : "androidx.navigation:navigation-compose:$nav_version",
             composeActivity : "androidx.activity:activity-compose:1.4.0",
-            composeMaterial : "androidx.compose.material:material:1.1.1",
-            composeUiTooling : "androidx.compose.ui:ui-tooling:1.1.1",
-            composeLiveData : "androidx.compose.runtime:runtime-livedata:1.1.1",
+            composeMaterial : "androidx.compose.material:material:$versions.composeVersion",
+            composeMaterial3 : "androidx.compose.material3:material3:1.0.0-alpha13",
+            composeUiTooling : "androidx.compose.ui:ui-tooling:$versions.composeVersion",
+            composeLiveData : "androidx.compose.runtime:runtime-livedata:$versions.composeVersion",
             composeLifecycleViewModel : "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1",
             composeHiltNavigation : "androidx.hilt:hilt-navigation-compose:1.0.0",
             coreKtx : "androidx.core:core-ktx:1.8.0",
-            appCompat : "androidx.appcompat:appcompat:1.4.2",
             testExtJUnit : "androidx.test.ext:junit:1.1.3",
             testEspressoCore : "androidx.test.espresso:espresso-core:3.4.0",
     ]
@@ -40,12 +47,5 @@ ext {
 
     jUnit = [
             jUnit : "junit:junit:4.13.2",
-    ]
-
-    versions = [
-            compileSdk : 32,
-            minSdk : 21,
-            targetSdk : 32,
-            kotlinCompilerExtension : '1.1.1'
     ]
 }
