--- a/feature-album-overview/build.gradle
+++ b/feature-album-overview/build.gradle
@@ -39,7 +39,7 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion versions.kotlinCompilerExtension
+        kotlinCompilerExtensionVersion versions.composeVersion
     }
 }
 
