reverted back to standard stable material and improved TopAppBar impl

--- a/core-ui/build.gradle
+++ b/core-ui/build.gradle
@@ -44,7 +44,7 @@ android {
 dependencies {
     api androidX.composeNavigation
     api androidX.composeHiltNavigation
-    api androidX.composeMaterial3
+    api androidX.composeMaterial
     api androidX.composeUiTooling
     api androidX.composeLifecycleViewModel
     api androidX.composeLiveData
