--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,4 +1,3 @@
-def nav_version = "2.4.2"
 def hilt_version = "2.42"
 def retrofit_version = "2.9.0"
 def moshi_version = "1.13.0"
@@ -12,9 +11,9 @@ ext {
     ]
 
     androidX = [
-            composeNavigation : "androidx.navigation:navigation-compose:$nav_version",
+            composeNavigation : "androidx.navigation:navigation-compose:2.4.2",
             composeActivity : "androidx.activity:activity-compose:1.4.0",
-            composeMaterial3 : "androidx.compose.material3:material3:1.0.0-alpha13",
+            composeMaterial : "androidx.compose.material:material:$versions.composeVersion",
             composeUiTooling : "androidx.compose.ui:ui-tooling:$versions.composeVersion",
             composeLiveData : "androidx.compose.runtime:runtime-livedata:$versions.composeVersion",
             composeLifecycleViewModel : "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1",
