--- a/build.gradle
+++ b/build.gradle
@@ -11,41 +11,29 @@ buildscript {
                 composeVersion : '1.1.1'
         ]
 
-        androidX = [
-                composeNavigation : "androidx.navigation:navigation-compose:2.4.2",
+        libraries = [
+                coil : "io.coil-kt:coil-compose:2.1.0",
                 composeActivity : "androidx.activity:activity-compose:1.4.0",
-                composeMaterial : "androidx.compose.material:material:$versions.composeVersion",
-                composeUiTooling : "androidx.compose.ui:ui-tooling:$versions.composeVersion",
-                composeLiveData : "androidx.compose.runtime:runtime-livedata:$versions.composeVersion",
-                composeLifecycleViewModel : "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1",
                 composeHiltNavigation : "androidx.hilt:hilt-navigation-compose:1.0.0",
+                composeLifecycleViewModel : "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1",
+                composeLiveData : "androidx.compose.runtime:runtime-livedata:$versions.composeVersion",
+                composeMaterial : "androidx.compose.material:material:$versions.composeVersion",
+                composeNavigation : "androidx.navigation:navigation-compose:2.4.2",
+                composeUiTooling : "androidx.compose.ui:ui-tooling:$versions.composeVersion",
                 coreKtx : "androidx.core:core-ktx:1.8.0",
-                testExtJUnit : "androidx.test.ext:junit:1.1.3",
-                testEspressoCore : "androidx.test.espresso:espresso-core:3.4.0",
-        ]
-
-        google = [
+                coroutines : "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9",
                 hiltAndroid : "com.google.dagger:hilt-android:$hilt_version",
                 hiltCompiler : "com.google.dagger:hilt-compiler:$hilt_version",
-        ]
-
-        square = [
+                moshi : "com.squareup.moshi:moshi:$moshi_version",
+                moshiCodegen : "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version",
                 retrofit : "com.squareup.retrofit2:retrofit:$retrofit_version",
                 retrofitMoshi : "com.squareup.retrofit2:converter-moshi:$retrofit_version",
-                moshiCodegen : "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version",
-                moshi : "com.squareup.moshi:moshi:$moshi_version",
         ]
 
-        jetBrains = [
-                coroutines : "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
-        ]
-
-        jUnit = [
+        testLibraries = [
+                extJUnit : "androidx.test.ext:junit:1.1.3",
                 jUnit : "junit:junit:4.13.2",
-        ]
-
-        other = [
-                coil : "io.coil-kt:coil-compose:2.1.0",
+                mockK : "io.mockk:mockk:1.12.4",
         ]
     }
 
