--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,7 @@ dependencies {
     implementation project(path: ':feature-album-detail')
     implementation project(path: ':feature-album-overview')
 
+    testImplementation testLibraries.jUnit
+    testImplementation testLibraries.mockK
+
 }
