--- a/feature-album-overview/build.gradle
+++ b/feature-album-overview/build.gradle
@@ -50,4 +50,7 @@ dependencies {
     implementation project(path: ':core')
     implementation project(path: ':core-ui')
 
+    testImplementation testLibraries.jUnit
+    testImplementation testLibraries.mockK
+
 }
