--- a/feature-album-overview/build.gradle
+++ b/feature-album-overview/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation project(path: ':core')
     implementation project(path: ':core-ui')
 
+    testImplementation testLibraries.coroutines
     testImplementation testLibraries.jUnit
     testImplementation testLibraries.mockK
 
