--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,16 @@
 buildscript {
-    def hilt_version = "2.42"
-    def retrofit_version = "2.9.0"
-    def moshi_version = "1.13.0"
     def coroutines_version = "1.3.9"
+    def hilt_version = "2.42"
+    def moshi_version = "1.13.0"
+    def retrofit_version = "2.9.0"
+    def room_version = "2.4.3"
 
     ext {
         versions = [
                 compileSdk : 32,
                 minSdk : 21,
                 targetSdk : 32,
-                composeVersion : '1.1.1'
+                composeCompiler : "1.3.0"
         ]
 
         libraries = [
@@ -17,18 +18,22 @@ buildscript {
                 composeActivity : "androidx.activity:activity-compose:1.4.0",
                 composeHiltNavigation : "androidx.hilt:hilt-navigation-compose:1.0.0",
                 composeLifecycleViewModel : "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1",
-                composeLiveData : "androidx.compose.runtime:runtime-livedata:$versions.composeVersion",
-                composeMaterial : "androidx.compose.material:material:$versions.composeVersion",
+                composeLiveData : "androidx.compose.runtime:runtime-livedata:1.2.1",
+                composeMaterial : "androidx.compose.material:material:1.2.1",
                 composeNavigation : "androidx.navigation:navigation-compose:2.4.2",
-                composeUiTooling : "androidx.compose.ui:ui-tooling:$versions.composeVersion",
+                composeUiTooling : "androidx.compose.ui:ui-tooling:1.2.1",
                 coreKtx : "androidx.core:core-ktx:1.8.0",
                 coroutines : "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version",
                 hiltAndroid : "com.google.dagger:hilt-android:$hilt_version",
                 hiltCompiler : "com.google.dagger:hilt-compiler:$hilt_version",
+                lifeCycleLiveDataKtx : "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1",
                 moshi : "com.squareup.moshi:moshi:$moshi_version",
                 moshiCodegen : "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version",
                 retrofit : "com.squareup.retrofit2:retrofit:$retrofit_version",
                 retrofitMoshi : "com.squareup.retrofit2:converter-moshi:$retrofit_version",
+                roomRuntime : "androidx.room:room-runtime:$room_version",
+                roomCompiler : "androidx.room:room-compiler:$room_version",
+                roomKtx : "androidx.room:room-ktx:$room_version"
         ]
 
         testLibraries = [
@@ -45,9 +50,9 @@ buildscript {
 }
 
 plugins {
-    id 'com.android.application' version '7.2.1' apply false
-    id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'com.android.application' version '7.2.2' apply false
+    id 'com.android.library' version '7.2.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
 }
 
 task clean(type: Delete) {
