--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -38,6 +38,7 @@ dependencies {
     api libraries.coreKtx
     api libraries.retrofit
     api libraries.moshi
+    api libraries.lifeCycleLiveDataKtx
 
     implementation libraries.retrofitMoshi
     implementation libraries.coroutines
