fixed room and implemented UDF and new state in overview module

--- a/core-ui/build.gradle
+++ b/core-ui/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     api libraries.composeHiltNavigation
     api libraries.composeMaterial
     api libraries.composeUiTooling
+    api libraries.composeLifecycleRuntime
     api libraries.composeLifecycleViewModel
     api libraries.composeLiveData
     api libraries.coil
