--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 buildscript {
     def coroutines_version = "1.3.9"
-    def hilt_version = "2.42"
+    def hilt_version = "2.43"
     def moshi_version = "1.13.0"
     def retrofit_version = "2.9.0"
     def room_version = "2.4.3"
+    def lifecycle_version = "2.6.0-alpha01"
 
     ext {
         versions = [
@@ -17,16 +18,17 @@ buildscript {
                 coil : "io.coil-kt:coil-compose:2.1.0",
                 composeActivity : "androidx.activity:activity-compose:1.4.0",
                 composeHiltNavigation : "androidx.hilt:hilt-navigation-compose:1.0.0",
-                composeLifecycleViewModel : "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1",
+                composeLifecycleRuntime : "androidx.lifecycle:lifecycle-runtime-compose:$lifecycle_version",
+                composeLifecycleViewModel : "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version",
                 composeLiveData : "androidx.compose.runtime:runtime-livedata:1.2.1",
                 composeMaterial : "androidx.compose.material:material:1.2.1",
-                composeNavigation : "androidx.navigation:navigation-compose:2.4.2",
+                composeNavigation : "androidx.navigation:navigation-compose:2.5.1",
                 composeUiTooling : "androidx.compose.ui:ui-tooling:1.2.1",
                 coreKtx : "androidx.core:core-ktx:1.8.0",
                 coroutines : "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version",
                 hiltAndroid : "com.google.dagger:hilt-android:$hilt_version",
                 hiltCompiler : "com.google.dagger:hilt-compiler:$hilt_version",
-                lifeCycleLiveDataKtx : "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1",
+                lifeCycleLiveDataKtx : "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version",
                 moshi : "com.squareup.moshi:moshi:$moshi_version",
                 moshiCodegen : "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version",
                 retrofit : "com.squareup.retrofit2:retrofit:$retrofit_version",
@@ -45,7 +47,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.42'
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.43'
     }
 }
 
