add ui test dependencies, setup and core ui tests

--- a/core-ui/build.gradle
+++ b/core-ui/build.gradle
@@ -49,4 +49,7 @@ dependencies {
     api libraries.composeLifecycleViewModel
     api libraries.coil
 
+    androidTestImplementation testLibraries.composeJUnit
+    debugImplementation testLibraries.composeManifest
+
 }
