--- a/feature-album-detail/build.gradle
+++ b/feature-album-detail/build.gradle
@@ -55,4 +55,7 @@ dependencies {
     testImplementation testLibraries.jUnit
     testImplementation testLibraries.mockK
 
+    androidTestImplementation testLibraries.composeJUnit
+    debugImplementation testLibraries.composeManifest
+
 }
