--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ buildscript {
 
         testLibraries = [
                 extJUnit : "androidx.test.ext:junit:1.1.3",
+                composeJUnit : "androidx.compose.ui:ui-test-junit4:1.2.1",
+                composeManifest : "androidx.compose.ui:ui-test-manifest:1.2.1",
                 coroutines : "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version",
                 jUnit : "junit:junit:4.13.2",
                 mockK : "io.mockk:mockk:1.12.4",
