--- a/feature-album-overview/build.gradle
+++ b/feature-album-overview/build.gradle
@@ -55,4 +55,6 @@ dependencies {
     testImplementation testLibraries.jUnit
     testImplementation testLibraries.mockK
 
+    androidTestImplementation testLibraries.composeJUnit
+    debugImplementation testLibraries.composeManifest
 }
