--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,13 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            minifyEnabled = false
+            applicationIdSuffix ".debug"
+            debuggable true
         }
     }
 
