--- a/build.gradle
+++ b/build.gradle
@@ -1,63 +1,22 @@
 buildscript {
-    def coroutines_version = "1.3.9"
-    def hilt_version = "2.43"
-    def moshi_version = "1.13.0"
-    def retrofit_version = "2.9.0"
-    def room_version = "2.4.3"
-    def lifecycle_version = "2.6.0-alpha01"
-    def compose_navigation_version = "2.5.2"
-
     ext {
         versions = [
-                compileSdk : 32,
+                compileSdk : 34,
                 minSdk : 21,
-                targetSdk : 32,
-                composeCompiler : "1.3.0"
+                targetSdk : 34,
+                composeCompiler : "1.5.8"
         ]
-
-        libraries = [
-                coil : "io.coil-kt:coil-compose:2.1.0",
-                composeActivity : "androidx.activity:activity-compose:1.4.0",
-                composeHiltNavigation : "androidx.hilt:hilt-navigation-compose:1.0.0",
-                composeLifecycleRuntime : "androidx.lifecycle:lifecycle-runtime-compose:$lifecycle_version",
-                composeLifecycleViewModel : "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version",
-                composeMaterial : "androidx.compose.material:material:1.2.1",
-                composeNavigation : "androidx.navigation:navigation-compose:$compose_navigation_version",
-                composeUiTooling : "androidx.compose.ui:ui-tooling:1.2.1",
-                coreKtx : "androidx.core:core-ktx:1.8.0",
-                coroutines : "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version",
-                hiltAndroid : "com.google.dagger:hilt-android:$hilt_version",
-                hiltCompiler : "com.google.dagger:hilt-compiler:$hilt_version",
-                moshi : "com.squareup.moshi:moshi:$moshi_version",
-                moshiCodegen : "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version",
-                retrofit : "com.squareup.retrofit2:retrofit:$retrofit_version",
-                retrofitMoshi : "com.squareup.retrofit2:converter-moshi:$retrofit_version",
-                roomRuntime : "androidx.room:room-runtime:$room_version",
-                roomCompiler : "androidx.room:room-compiler:$room_version",
-                roomKtx : "androidx.room:room-ktx:$room_version"
-        ]
-
-        testLibraries = [
-                extJUnit : "androidx.test.ext:junit:1.1.3",
-                composeJUnit : "androidx.compose.ui:ui-test-junit4:1.2.1",
-                composeManifest : "androidx.compose.ui:ui-test-manifest:1.2.1",
-                coroutines : "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version",
-                jUnit : "junit:junit:4.13.2",
-                mockK : "io.mockk:mockk:1.12.4",
-        ]
-    }
-
-    dependencies {
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.43'
     }
 }
 
 plugins {
-    id 'com.android.application' version '7.2.2' apply false
-    id 'com.android.library' version '7.2.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    alias libs.plugins.android.application apply false
+    alias libs.plugins.android.library apply false
+    alias libs.plugins.kotlin.android apply false
+    alias libs.plugins.hilt.android apply false
+    alias libs.plugins.ksp apply false
 }
 
-task clean(type: Delete) {
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
