added koin and converted album details module to koin

--- a/core-ui/build.gradle
+++ b/core-ui/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     api libs.compose.lifecycle.runtime
     api libs.compose.lifecycle.viewmodel
     api libs.coil
+    api libs.koin.compose
 
     androidTestImplementation libs.compose.junit
     debugImplementation libs.compose.manifest
