--- a/core-db/build.gradle
+++ b/core-db/build.gradle
@@ -37,6 +37,7 @@ android {
 
 dependencies {
 
+    implementation libs.koin
     implementation libs.room.runtime
     api libs.room.ktx
     ksp libs.room.compiler
