--- a/core-ui/build.gradle
+++ b/core-ui/build.gradle
@@ -45,13 +45,13 @@ android {
 dependencies {
 
     api libs.compose.navigation
-    api libs.compose.hilt.navigation
     api libs.compose.material
     api libs.compose.ui.tooling
     api libs.compose.lifecycle.runtime
     api libs.compose.lifecycle.viewmodel
     api libs.coil
     api libs.koin.compose
+    api libs.koin.navigation
 
     androidTestImplementation libs.compose.junit
     debugImplementation libs.compose.manifest
